tests/NormalTests/paczka1/fuzzy1/94615764.err
Error in line 4: Q4JIJkz S272 45,4
Error in line 10: dy79AM4 S174 20,3
Error in line 11: dy79AM4 A598 37,7
Error in line 13: ybs A598 60,40
Error in line 9: hLfqW A901 78,1
Error in line 15: hLfqW S272 11,6
Error in line 37: wUxSebYgUw S174 22,2
Error in line 35: hLfqW A901 110,8
